--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: Import libraries"
+    "# Adding Lat/Lon coordinates to GOES-16/17 L2 Data on Amazon Web Services\n",
+    "\n",
+    "Author: Lucas Sterzinger | lsterzinger@ucdavis.edu |  [Follow me on Twitter](https://twitter.com/lucassterzinger)\n",
+    "\n",
+    "This tutorial is paired with a medium post that [can be found here]() (and contains more detail on each step). \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import libraries"
    ]
   },
   {
@@ -30,6 +41,13 @@
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Open file with s3fs and xarray"
    ]
   },
   {
@@ -66,6 +84,16 @@
    "outputs": [],
    "source": [
     "ds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "## Define function to calculate lat/lon and to dataset as coordinates\n",
+    "\n",
+    "The math for this function was obtained from https://makersportal.com/blog/2018/11/25/goes-r-satellite-latitude-and-longitude-grid-projection-algorithm"
    ]
   },
   {
@@ -114,6 +142,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define function to get x/y bounds given lat/lon bounds"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -138,6 +173,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "## Add lat/lon to dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -153,6 +196,13 @@
    "outputs": [],
    "source": [
     "ds.coords"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set lat/lon box and subset the data"
    ]
   },
   {
@@ -178,20 +228,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Do a quick plot of the blue channel with xarray"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(8,5))\n",
-    "p = subset.CMI_C01.plot(x='lon', y='lat', \n",
-    "                   subplot_kws={\n",
-    "                       'projection' : ccrs.Orthographic(-130, 40),\n",
-    "#                        'extent' : (lons[0], lons[1], lats[0], lats[1])\n",
-    "                   }, transform=ccrs.PlateCarree())\n",
-    "# p.axes.set_global()\n",
+    "\n",
+    "p = subset.CMI_C01.plot(\n",
+    "    x='lon', y='lat', \n",
+    "    subplot_kws={'projection' : ccrs.Orthographic(-130, 40)}, \n",
+    "    transform=ccrs.PlateCarree()\n",
+    ")\n",
+    "\n",
     "p.axes.add_feature(cfeature.COASTLINE)\n",
     "p.axes.add_feature(cfeature.STATES)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get RGB data, and calculate \"true\" green from the \"fake\" green (veggie) channel"
    ]
   },
   {
@@ -224,16 +289,8 @@
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(8,5))\n",
-    "ax = plt.subplot(111)\n",
-    "ax.imshow(rgb)"
+    "plt.imshow(rgb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
