--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Author: Lucas Sterzinger | lsterzinger@ucdavis.edu |  [Follow me on Twitter](https://twitter.com/lucassterzinger)\n",
     "\n",
-    "This tutorial is paired with a medium post that [can be found here]() (and contains more detail on each step). \n"
+    "This tutorial is paired with a medium post that [can be found here](https://lsterzinger.medium.com/add-lat-lon-coordinates-to-goes-16-goes-17-l2-data-and-plot-with-cartopy-27f07879157f) (and contains more detail on each step). \n"
    ]
   },
   {
